Revert "test: fix mockito errors accessing protected API in JDK16 (#11034) (#11073)"
This reverts commit 139137ccacbf9fe668fa8167d91381efbf1cad85.