@@ -242,8 +242,8 @@
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
-                <artifactId>mockito-core</artifactId>
-                <version>3.10.0</version>
+                <artifactId>mockito-all</artifactId>
+                <version>1.10.19</version>
             </dependency>
             <dependency>
                 <groupId>org.hamcrest</groupId>
@@ -253,7 +253,7 @@
             <dependency>
                 <groupId>org.easymock</groupId>
                 <artifactId>easymock</artifactId>
-                <version>4.3</version>
+                <version>3.4</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -271,9 +271,10 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
+            <artifactId>mockito-all</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
@@ -507,7 +508,6 @@
                         <excludes>
                             <exclude>${exclude.windows.failed.tests}</exclude>
                         </excludes>
-                        <argLine>${surefire.argLine}</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -617,8 +617,6 @@
             </activation>
             <properties>
                 <maven.compiler.release>8</maven.compiler.release>
-                <!-- needed for running easymock in JDK11+ (easymock#235) -->
-                <surefire.argLine>--add-opens java.base/java.lang=ALL-UNNAMED</surefire.argLine>
             </properties>
             <build>
                 <pluginManagement>
